feat: change folder

--- a/index.html
+++ b/index.html
@@ -717,10 +717,10 @@
     </div>
     <div class="footer-bottom-row">
       <p class="p-footer-bottom-row p-footer-bottom-row-left">2023</p>
-      <a href="https://rs.school/js-stage0/ " class="p-footer-bottom-row p-footer-bottom-row-center" target="_blank">The
+      <a href="https://rs.school/courses/javascript-preschool-ru" class="p-footer-bottom-row p-footer-bottom-row-center" target="_blank">The
         Rolling Scopes School</a>
-      <p><a href="https://github.com/ViacheslavAnisimov" class="p-footer-bottom-row p-footer-bottom-row-right"
-          target="_blank">Viacheslav</a></p>
+      <p><a href="https://github.com/vsv-noon" class="p-footer-bottom-row p-footer-bottom-row-right"
+          target="_blank">GitHub</a></p>
     </div>
   </div>
 </footer>
